--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "firebase": "^5.5.8",
     "i": "^0.3.6",
     "immer": "^1.7.4",
     "npm": "^6.4.1",
